various spelling fixes

--- a/404.html
+++ b/404.html
@@ -41,13 +41,13 @@
                 <div class="container d-flex flex-column">
                     <h1>404!</h1>
                     <p class="lead fw-bold">This page does not exist.</p>
-                    <p><i class="fs-sm fw-light">Or does it? Since there is a page you are looking at... Anyways, the url you tried to enter has no content.</i></p>
+                    <p><i class="fs-sm fw-light">Or does it? Since there is a page you are looking at... Anyways, the URL you tried to enter has no content.</i></p>
                     </p>
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
