--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,13 +53,13 @@
                             <div class="col border rounded-3 bg-dark p-2 m-4">
                                 <h4 class="p-2">About Me</h4>
                                 <p class="p-2">
-                                    I am a person, thats fo sure!
+                                    I am a person, that's fo sure!
                                 </p>
                             </div>
                             <div class="col border rounded-3 bg-dark p-2 m-4">
                                 <h4 class="p-2">Projects</h4>
                                 <p class="p-2">
-                                    I have taken part in various interesting projects you can find a selection here:
+                                    I have participated in various interesting projects. You can find a selection here:
                                 </p>
                                 
                                 <a class="btn btn-light m-2" href="https://danielbusse.github.io/projects/">
@@ -92,7 +92,7 @@
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
