--- a/projects/b-thesis/index.html
+++ b/projects/b-thesis/index.html
@@ -41,7 +41,7 @@
                 <div class="container d-flex flex-column w-75 text-start">
                     <h1 class="text-center p-5">Bachelor Thesis</h1>
                     <p class="lead font-monospace">
-                        My bachelors thesis was about "Lane detection by a 3D camera in a Robotic Operating System with Open Computer Vision". 
+                        My bachelor's thesis was about "Lane detection by a 3D camera in a Robotic Operating System with Open Computer Vision". 
                     </p>
                     <p class="p-2 text-warning">
                         This page will be added soon
@@ -74,7 +74,7 @@
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
