--- a/projects/naolino/index.html
+++ b/projects/naolino/index.html
@@ -47,25 +47,25 @@
                     </p>
                     <p class="p-2">
                         My project partner and I chose to double down on the field of image recognition and wanted to implement an algorithm to detect objects. 
-                        Our Goal was to detect multiple diffent objects with different techniques. The first was template maching and the second a cascade classifier.
+                        Our Goal was to detect multiple different objects with different techniques. The first beeing template maching and the second a cascade classifier.
                         We tried to detect three objects. The lock of the container the robot was stored in, an apple and a banana.
                     </p>
                     <img src="https://danielbusse.github.io/img/nao.jpg" class="mx-auto d-block img-fluid p-4" alt="The Nao we used, called Marvin">
                     <p class="p-2">
-                        We tried to detect the lock by using template matching from opencv. This is a technique were you try to find a template in an image by moving it over the 
+                        We tried to detect the lock by using template matching from opencv. This is a technique where you try to find a template in an image by moving it over the 
                         image and find spots that match the template. You can see the template and a result of the matching below.
                     </p>
                     <img src="https://danielbusse.github.io/img/lock_template.jpg" class="mx-auto d-block img-fluid p-4" alt="Template of the Lock for template maching">
                     <img src="https://danielbusse.github.io/img/lock_template_detected.png" class="mx-auto d-block img-fluid p-4" alt="Lock detected by template maching">
                     <p>
                         For detecting the fruits we tried to train a cascade classifier from opencv on images we provided ourselves. We created a positives/negatives dataset for the 
-                        classiefierto train on. For training we used my home computer with a GPU. This was not a very good idea that did cost us a lot of our project time. 
-                        We would have been able to use ressources of our university but didnt think about asking or existing datasets with huge amounts of data. But we 
-                        underestimated the time needed for training and the neccessaty of a lot of data for training.
+                        classiefier to train on. For training we used my home computer with a GPU. This was not a very good idea that did cost us a lot of our project time. 
+                        We would have been able to use ressources of our university but didn't think about asking or existing datasets with huge amounts of data. But we 
+                        underestimated the time needed for training and the necessity of a lot of data for training.
                     </p>
                     <p class="p-2">
-                        The result of the project is mixed. We did get template maching to work easy and relativley reliable. However, we were not be able to train the 
-                        cascade classifier to detect objects reliably. The results where ambigous and were higly dependent on luck to detect an object correctly. This was 
+                        The result of the project is mixed. We did get template maching to work easy and relatively reliable. However, we were not be able to train the 
+                        cascade classifier to detect objects reliably. The results where ambiguous and were higly dependent on luck to detect an object correctly. This was 
                         due to our lack of experience on the topic. We had not collected enough Data and only used our personal hardware to train the classifer. 
                     </p>
                     <p class="p-2">
@@ -73,7 +73,7 @@
                         about object detection but also on how to approach a unknown and difficult topic. If you are interested in the results you can find a small recorded 
                         snippet of the presentation below. 
                     </p>
-                    <p class="p-1 fst-italic">(The video was cut a little weird by iCampus, but the detection of the apple was successful int he second try, after the cut. You can 
+                    <p class="p-1 fst-italic">(The video was cut a little weird by iCampus, but the detection of the apple was successful in the second try, after the cut. You can 
                         hardly hear the Nao say "Apfel habe ich links gefunden.")</p>
                     <div class="items-align-center text-center">
                         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/J_lsKlnu7mg?si=mWkvYRX2Q44YdHAU" title="YouTube video player" frameborder="0" 
@@ -84,7 +84,7 @@
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
