--- a/projects/telematikprojekt/index.html
+++ b/projects/telematikprojekt/index.html
@@ -41,8 +41,8 @@
                 <div class="container d-flex flex-column w-75 text-start">
                     <h1 class="text-center p-5">Telematikprojekt</h1>
                     <p class="lead font-monospace">
-                        The "Telematikprojekt" is a project in the curriculum of the telematics master on my university that streches over two semesters with 
-                        the first beeing the planning phase and the second beeing the development phase.
+                        The "Telematikprojekt" is a project in the curriculum of the telematics master on my university that stretches over two semesters with 
+                        the first being the planning phase and the second being the development phase.
                     </p>
                     <p class="p-2 text-warning">
                         This page will be added in soon!
@@ -60,7 +60,7 @@
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
