--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </header>
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <h1 class="p-1 mb-4">Hello, i am Daniel Busse!</h1>
+                    <h1 class="p-1 mb-4">Hello, I am Daniel Busse!</h1>
                     <p class="lead p-1">I am a master's student in the field of Telematics at the Technical University of Applied Sciences 
                         Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
                         vehicle automation.</p>
@@ -52,7 +52,7 @@
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
