--- a/projects/index.html
+++ b/projects/index.html
@@ -40,8 +40,8 @@
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
                     <h1>Selected Projects</h1>
-                    <p class="lead">These are some projects i worked on in the past.</p>
-                    <p class="text-warning">But i am currenly still writing the text for these project pages! :)</p>
+                    <p class="lead">These are some projects I worked on in the past.</p>
+                    <p class="text-warning">But I am currently still writing the text for these project pages! :)</p>
                     </p>
                     <div class="container col-md-6 w-75">
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
@@ -130,7 +130,7 @@
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
