--- a/projects/parkourmeister/index.html
+++ b/projects/parkourmeister/index.html
@@ -45,11 +45,11 @@
                         Latter will not be covered here but can be found under <a href="https://danielbusse.github.io/projects/" class="text-info">projects</a>.
                     </p>
                     <p class="p-2">
-                        The Task was to develop an algorithm to traverse the NIBO 2 through a labyrinth-like parcour with deadends and very slim sections. The 
-                        Goal was to reach the exit, wich was an opening to an open area.
+                        The task was to develop an algorithm to traverse the NIBO 2 through a labyrinth-like parcour with deadends and very slim sections. The 
+                        Goal was to reach the exit, which was an opening to an open area.
                     </p>
                     <p class="p-2">
-                        To sense the environment, the NIBO 2 is equiped with multiple sensors as can be seen in the following image. It has 5 IR-Sensors in his 
+                        To sense the environment, the NIBO 2 is equipped with multiple sensors as can be seen in the following image. It has 5 IR-Sensors in his 
                         frontsection facing left, right, front and diagonally to the front and each side. There are also floorsensors that sense, if there is a 
                         floor beneath these sensors. Besides these there are also linesensors, with were not used in this project.
                     </p>
@@ -59,7 +59,7 @@
                         and its sensors the robot will switch the state to another one or stay in the same state. These states shape the behavior of the robot.
                     </p>
                     <p class="p-2">
-                        The floorsensors would stop the robot imidiately and set it into the stop-state if they triggered. This is neccessary to prevent the robot 
+                        The floorsensors would stop the robot immediately and set it into the stop-state if they triggered. This is necessary to prevent the robot 
                         from falling of an edge. Besides that they acted as a detector that checks if a direction in front of the robot is blocked.
                         <br>
                         The IR sensors are used to sense walls and their proximity to the robot. There were two thresholds to seperate the detected data into 3 states: 
@@ -146,7 +146,7 @@
                         </table>
                     </p>
                     <p class="p-2">
-                        Algorithmicly the robot prefers stopping over left turns over straights over right turns over backwards. This way it may solve any labyrinth mithout loops. 
+                        Algorithmically the robot prefers stopping over left turns over straights over right turns over backwards. This way it may solve any labyrinth mithout loops. 
                         If there is a loop present in the labyrinth the robot may get trapped in this loop. But since the parcour to solve would not contain these, we 
                         did not have to solve this problem to complete the course.
                     </p>                    
@@ -154,7 +154,7 @@
             </main>
             <footer class="mt-auto text-white-50">
                 <p>
-                    Peronal website of Daniel Busse<br>
+                    Personal website of Daniel Busse<br>
                     © 2024 Daniel Busse
                 </p>
             </footer>
