some grammar corrections

--- a/projects/naolino/index.html
+++ b/projects/naolino/index.html
@@ -60,8 +60,8 @@
                     <p>
                         For detecting the fruits we tried to train a cascade classifier from opencv on images we provided ourselves. We created a positives/negatives dataset for the 
                         classiefier to train on. For training we used my home computer with a GPU. This was not a very good idea that did cost us a lot of our project time. 
-                        We would have been able to use ressources of our university but didn't think about asking or existing datasets with huge amounts of data. But we 
-                        underestimated the time needed for training and the necessity of a lot of data for training.
+                        We would have been able to use ressources of our university but didn't think about asking. We also could have used an existing datasets with huge amounts of data. 
+                        But we underestimated the time needed for training and the necessity of a lot of data for training.
                     </p>
                     <p class="p-2">
                         The result of the project is mixed. We did get template maching to work easy and relatively reliable. However, we were not be able to train the 
