--- a/projects/ronaldo/index.html
+++ b/projects/ronaldo/index.html
@@ -65,8 +65,8 @@
                     <P>
                         In the search state the Nibo would rotate around itself to get a 360 ° look. This would happen indefinitely if no ball can be found. The approach 
                         state based on data provided by the Raspberry. Depending on this data the nibo would change its relative rotation and position to the ball. The 
-                        goal would be to get the ball in a good position for shooting. In the shooting state the nibo would approach the ball with high speed (for a nibo)
-                        until he hits the ball.
+                        goal would be to get the ball in a good position for shooting. In the shooting state the Nibo would approach the ball with high speed (for a Nibo)
+                        until he hits it.
                     </P>
                     <p>
                         The result of this project was a success. In the demonstration ronaldo performed superb, maybe even better than his namesake. We also got a first 
