--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
                 <div class="container d-flex flex-column">
                     <h1>404!</h1>
                     <p class="lead fw-bold">This page does not exist.</p>
-                    <p><i class="fs-sm fw-light">Or does it? Since there is a page you are looking at... Anyways, the URL you tried to enter has no content.</i></p>
+                    <p><i class="fs-sm fw-light">Or does it? Since there is a page you are looking at... Anyway, the URL you tried to enter has no content.</i></p>
                     </p>
                 </div>
             </main>
