changed background color

--- a/projects/naolino/index.html
+++ b/projects/naolino/index.html
@@ -17,7 +17,7 @@
             }
         </style>
     </head>
-    <body class="d-flex text-center mb-auto text-white" style="background-color: #376f55;">
+    <body class="d-flex text-center mb-auto text-white" style="background-color: #1e524b;">
         <div class="container d-flex flex-column p-3">
             <header class="container">
                 <nav class="navbar navbar-expand-sm">
