rebranded portfolio as about-me

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/">Home</a>
                             </li>
                             <li class="nav-item p-1">
-                                <a class="nav-link text-light" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
+                                <a class="nav-link text-light" href="https://danielbusse.github.io/about-me/">About Me</a>
                             </li>
                             <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/projects/">Projects</a>
