--- a/about-me/index.html
+++ b/about-me/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Portfolio of Daniel Busse">
         <meta name="author" content="Daniel Busse">
 
-        <title>Daniel Busse | Portfolio</title>
+        <title>Daniel Busse | About Me</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
@@ -28,7 +28,7 @@
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/">Home</a>
                             </li>
                             <li class="nav-item p-1">
-                                <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/portfolio/">Portfolio</a>
+                                <a class="nav-link text-light fw-bold active" aria-current="page" href="https://danielbusse.github.io/about-me/">About Me</a>
                             </li>
                             <li class="nav-item p-1">
                                 <a class="nav-link text-light" href="https://danielbusse.github.io/projects/">Projects</a>
@@ -39,33 +39,12 @@
             </header>
             <main class="d-flex px-3 flex-grow-1 align-items-center">
                 <div class="container d-flex flex-column">
-                    <div class="p-5 mb-4 border rounded-3">
-                        <h1 class="display-5 fw-bold">Portfolio</h1>
+                    <div class="p-5 mb-4">
+                        <h1 class="display-5 fw-bold">About Me</h1>
                         <p class="fs-4 mb-4 text-warning">
-                            I need to reformat my Portfolio to be more compact and better readable. Check out my CV or Projects if you are interested!
-                            <!--
-                            My Portfolio includes projects of different topics like ______.
-                            You can read about them under projects.
-                            
-                            -->
+                            This is ALL about me!
                         </p>
                         <div class="row p-2">
-                            <div class="col border rounded-3 bg-dark p-2 m-4">
-                                <h4 class="p-2">About Me</h4>
-                                <p class="p-2">
-                                    I am a person, that's fo sure!
-                                </p>
-                            </div>
-                            <div class="col border rounded-3 bg-dark p-2 m-4">
-                                <h4 class="p-2">Projects</h4>
-                                <p class="p-2">
-                                    I have participated in various interesting projects. You can find a selection here:
-                                </p>
-                                
-                                <a class="btn btn-light m-2" href="https://danielbusse.github.io/projects/">
-                                    Check out Projects
-                                </a>
-                            </div>
                         </div>
                         <div class="row">
                             <div class="col">
