changed read more link to button

--- a/projects/index.html
+++ b/projects/index.html
@@ -53,7 +53,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/telematikprojekt/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
+                                    class="btn btn-outline-light icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
@@ -70,7 +70,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/b-thesis/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
+                                    class="btn btn-outline-light icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
@@ -85,7 +85,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/naolino/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
+                                    class="btn btn-outline-light icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
@@ -100,7 +100,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/ronaldo/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
+                                    class="btn btn-outline-light icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
@@ -115,7 +115,7 @@
                                 </p>
                                 <div>
                                     <a href="https://danielbusse.github.io/projects/parkourmeister/" 
-                                    class="icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
+                                    class="btn btn-outline-light icon-link gab-1 icon-link-hover streched-link fw-bold text-info">
                                         Read More
                                     </a>
                                 </div>
