changed icons, buttons on about me and main page

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -48,20 +48,20 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <a class="btn btn-light" href="https://danielbusse.github.io/cv_eng.pdf">
+                                <a class="btn btn-outline-light" href="https://danielbusse.github.io/cv_eng.pdf">
                                     <img src="https://danielbusse.github.io/img/icons/cv-icon.png" height="20">
                                     Read my CV
                                 </a>
                             </div>
                             <div class="col">
-                                <a class="btn btn-light" href="https://www.linkedin.com/in/danielbusse97/">
-                                    <img src="https://danielbusse.github.io/img/icons/LI-In-Bug.png" height="20">
+                                <a class="btn btn-outline-light" href="https://www.linkedin.com/in/danielbusse97/">
+                                    <img src="https://danielbusse.github.io/img/icons/In-White.png" height="20">
                                     Check out my LinkedIn
                                 </a>
                             </div>
                             <div class="col">
-                                <a class="btn btn-light" href="https://github.com/danielbusse/">
-                                    <img src="https://danielbusse.github.io/img/icons/github-mark.png" height="20">
+                                <a class="btn btn-outline-light" href="https://github.com/danielbusse/">
+                                    <img src="https://danielbusse.github.io/img/icons/github-mark-white.png" height="20">
                                     Check out my GitHub
                                 </a>
                             </div>
