--- a/index.html
+++ b/index.html
@@ -45,9 +45,29 @@
                         vehicle automation.</p>
                     <p class="lead p-1">
                         <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">
-                            Check out my Portfolio
+                            Check out my Projects
                         </a>
                     </p>
+                    <div class="row mt-5">
+                        <div class="col">
+                            <a class="btn btn-outline-light" href="https://danielbusse.github.io/cv_eng.pdf">
+                                <img src="https://danielbusse.github.io/img/icons/cv-icon.png" height="20">
+                                Read my CV
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a class="btn btn-outline-light" href="https://www.linkedin.com/in/danielbusse97/">
+                                <img src="https://danielbusse.github.io/img/icons/In-White.png" height="20">
+                                Check out my LinkedIn
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a class="btn btn-outline-light" href="https://github.com/danielbusse/">
+                                <img src="https://danielbusse.github.io/img/icons/github-mark-white.png" height="20">
+                                Check out my GitHub
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer class="mt-auto text-white-50">
