changes link on main page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         Wildau. I am currently looking for a master's thesis in the field of machine learning, preferably in the area of 
                         vehicle automation.</p>
                     <p class="lead p-1">
-                        <a href="https://danielbusse.github.io/portfolio/" class="btn btn-lg btn-light fw-bold border-white bg-white">
+                        <a href="https://danielbusse.github.io/projects/" class="btn btn-lg btn-light fw-bold border-white bg-white">
                             Check out my Projects
                         </a>
                     </p>
