added "edited" hint on projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -47,7 +47,11 @@
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">Drone, Automation, Sensor</strong>
-                                <h3 class="p-2">Telematikprojekt</h3>
+                                <h3 class="p-2">Telematikprojekt 
+                                    <span class="badge bg-secondary rounded-5">
+                                        <abbr title="still beeing edited">🏗️</abbr>
+                                    </span>
+                                </h3>
                                 <p class="card-text mb-4">
                                     Detecting radioactive radiation with an autonomous Drone and displaying it
                                 </p>
@@ -64,7 +68,11 @@
                         <div class="row mb-2 border rounded overflow-hidden flex-md-row mb-4 shadow-smh-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary-emphsis fw-lighter fs-6 fst-italic text-white-50">ROS, Lane Detection, Image Recognition</strong>
-                                <h3 class="p-2">Bachelor Thesis</h3>
+                                <h3 class="p-2">Bachelor Thesis 
+                                    <span class="badge bg-secondary rounded-5">
+                                        <abbr title="still beeing edited">🏗️</abbr>
+                                    </span>
+                                </h3>
                                 <p class="card-text mb-4">
                                     Lane detection with a 3D camera in a Robotic Operating System with Open Computer Vision
                                 </p>
