added about me content

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -15,6 +15,9 @@
             html, body {
                 height: 100%;
             }
+            .text-block {
+                text-align: justify;
+            }
         </style>
     </head>
     <body class="d-flex text-center mb-auto text-white" style="background-color: #1e524b;">
@@ -38,14 +41,36 @@
                 </nav>
             </header>
             <main class="d-flex px-3 flex-grow-1 align-items-center">
-                <div class="container d-flex flex-column">
+                <div class="container d-flex flex-column w-75 text-start">
                     <div class="p-5 mb-4">
-                        <h1 class="display-5 fw-bold">About Me</h1>
-                        <p class="fs-4 mb-4 text-warning">
-                            This is ALL about me!
+                        <h1 class="display-5 fw-bold text-center p-5">Welcome!</h1>
+                        <p class="fs-4 mb-4 mb-5 text-block">
+                            Thanks for checking out my little website. I'm Daniel, a <span class="fst-italic">software engineer</span> with a 
+                            <span class="fst-italic">Bachelor's degree in Telematics</span>, currently pursuing a Master's degree in the same field.
                         </p>
-                        <div class="row p-2">
-                        </div>
+                        <p class="text-block mb-4">
+                            I love to be creative! And I express my creativity by making music, video game development and conceptualizing. I also enjoy 
+                            doing team sports. The emphasis on teamwork in sports is important to me than competition. Sports I like to play are volleyball, 
+                            football (soccer) and many more — there are way too many to list and it's always fun to learn something new anyway.
+                        </p>
+                        <p class="text-block mb-4">
+                            I am a logical and strategic thinker. I like to play video games of different genres but mostly with strategic elements.
+                            I have a high interest in understanding things and ideas better and the relationships and connections between them. I am 
+                            eager to learn more and love exchanging ideas and thoughts with others, exploring multiple perspectives to gain a deeper understanding.
+                        </p>
+                        <p class="text-block mb-4">
+                            Music is my longest-running passion. I've been playing guitar since primary school and still jam with others regularly. Besides guitar I 
+                            like playing other instruments like piano and drums, even though I am a beginner with them. And like most people, I love listening 
+                            to music and discussing it with others.
+                        </p>
+                        <p class="text-block mb-4">
+                            Game development is my personal coding adventure. This multidisciplinary field of engineering leaves so much room for creative ideas 
+                            and experimentation. I love being able to pack emotions, ideas, relationships and fun into a singular medium. 
+                        </p>
+                        <p class="text-block mb-4">
+                            If you want to read about my professional work, feel free to check out my CV, LinkedIn and GitHub below! Or read about some 
+                            project I worked on under <a class="text-info" href="http://danielbusse.github.io/projects/">Projects section</a>.
+                        </p>
                         <div class="row">
                             <div class="col">
                                 <a class="btn btn-outline-light" href="https://danielbusse.github.io/cv_eng.pdf">
